--- a/src/styles/cmps/_checkout.scss
+++ b/src/styles/cmps/_checkout.scss
@@ -29,6 +29,7 @@
 
             span:nth-child(2) {
                 text-decoration: underline;
+                color: $clr2;
             }
         }
 
@@ -47,6 +48,7 @@
         .guests-label {
             font-size: rem(10px);
         }
+
     }
 
     .guests-modal {
@@ -77,7 +79,7 @@
 
     .open-guests-btn {
         :nth-child(1) {
-            font-size: rem(16px);
+            font-size: rem(14px);
         }
     }
 
@@ -110,16 +112,22 @@
             border-radius: 13px;
 
             .dates-container {
-                // padding: 10px;
-
-                // input::-webkit-datetime-edit,
-                // input::-webkit-inner-spin-button,
-                // input::-webkit-clear-button {
-                //     display: none;
-                // }
 
                 .check-date {
                     border: none;
+
+                    &::-webkit-calendar-picker-indicator {
+                        background: transparent;
+                        bottom: 0;
+                        color: transparent;
+                        cursor: pointer;
+                        height: auto;
+                        left: 0;
+                        position: absolute;
+                        right: 0;
+                        top: 0;
+                        width: auto;
+                    }
                 }
 
                 label {
@@ -181,19 +189,10 @@
         }
     }
 
-
     .mouse-cursor-gradient-tracking {
         position: relative;
-        // background: linear-gradient(90deg, #f1254b 0, #e61e4d 27.5%, #e31c5f 40%, #d70466 57.5%, #bd1e59 75%, #bd1e59 100%);
-        // padding: 0.5rem 1rem;
-        // font-size: 1.2rem;
-        // border: none;
-        // color: white;
-        // cursor: pointer;
         outline: none;
         overflow: hidden;
-
-
         height: 48px;
         width: 100%;
         background: linear-gradient(90deg, #f1254b 0, #e61e4d 27.5%, #e31c5f 40%, #d70466 57.5%, #bd1e59 75%, #bd1e59 100%);
@@ -201,15 +200,13 @@
         font-size: rem(16px);
         color: $clr8;
         font-weight: bold;
+    }
 
-
-      }
-      
-      .mouse-cursor-gradient-tracking span {
+    .mouse-cursor-gradient-tracking span {
         position: relative;
-      }
-      
-      .mouse-cursor-gradient-tracking:before {
+    }
+
+    .mouse-cursor-gradient-tracking:before {
         --size: 0;
         content: '';
         position: absolute;
@@ -218,13 +215,13 @@
         width: var(--size);
         height: var(--size);
         // background: radial-gradient( rgb(209, 14, 47), transparent);
-        background: radial-gradient(circle closest-side, #e64462 , transparent);
+        background: radial-gradient(circle closest-side, #e64462, transparent);
         transform: translate(-50%, -50%);
         transition: width 0.2s ease, height 0.2s ease;
-      }
-      
-      .mouse-cursor-gradient-tracking:hover:before {
+    }
+
+    .mouse-cursor-gradient-tracking:hover:before {
         --size: 200px;
-      }
+    }
 
 }
