--- a/src/styles/cmps/_reviews.scss
+++ b/src/styles/cmps/_reviews.scss
@@ -1,92 +1,87 @@
 .reviews-container {
-    // display: grid;
-    // grid-template-columns: 1fr 1fr;
     display: flex;
-    flex-wrap: wrap;
-    gap: 50px;
+    flex-direction: column;
     padding: 20px 0 40px 0;
     box-shadow: inset 0 -0.7px 0 0 $clr5;
-
-    .review {
-        gap: 20px;
-        flex-basis: 40%;
-
-        p {
-            -webkit-line-clamp: 4;
-            overflow: hidden;
-            max-height: 120px;
-        }
-    }
-
-    .review-user-info {
-        gap: 10px;
-    }
-
-    .review-date {
-        color: $clr4;
-    }
 
     .curr-reviews {
         color: $clr3;
         font-size: rem(22px);
         font-weight: 600;
+        padding-top: 30px;
 
         .star-icon {
             width: 15px;
             height: 15px;
             margin-right: 7px;
         }
-    }
 
-    meter {
-        height: rem(10px);
-        width: rem(118px);
-    }
+        .reviews-summary {
+            padding-top: 25px;
+            font-size: rem(16px);
+            font-weight: 400;
+            gap: 10px;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: 1fr 1fr 1fr;
+            margin-bottom: 30px;
 
-    meter::-webkit-meter-bar {
-        background: $clr6-opacity;
-        border-radius: unset;
-    }
+            span {
+                font-size: rem(12px);
+                font-weight: 600;
+            }
 
-    /*background color of bar*/
-    meter::-webkit-meter-optimum-value {
-        background: $clr3;
-    }
+            >* {
+                margin-right: 100px;
+            }
 
+            meter {
+                height: rem(10px);
+                width: rem(118px);
+            }
 
-    .curr-reviews {
-        padding-top: 30px;
-    }
+            meter::-webkit-meter-bar {
+                background: $clr6-opacity;
+                border-radius: unset;
+            }
 
-    .reviews-summary {
-        padding-top: 30px;
-        font-size: rem(16px);
-        font-weight: 400;
-        flex-wrap: wrap;
-        gap: 20px;
+            meter::-webkit-meter-optimum-value {
+                background: $clr3;
+            }
 
-        span {
-            font-size: rem(12px);
-            font-weight: 600;
+            .rating-bar {
+                gap: 10px;
+                width: 150px;
+            }
         }
     }
 
-    .stats-container {
-        flex-basis: 40%;
-    }
-
-    .rating-bar {
-        gap: 10px;
-        width: 150px;
-    }
-
     .reviews-info {
-        gap: 50px 180px;
-        display: flex;
-        flex-wrap: wrap;
-    }
-}
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        row-gap: 50px;
 
-.css-sghohy-MuiButtonBase-root-MuiButton-root {
-    background-color: $clr9;
+        >* {
+            margin-right: 100px;
+        }
+
+        .review-user-info {
+            gap: 10px;
+
+            .review-date {
+                color: $clr4;
+            }
+        }
+
+        .review {
+            gap: 20px;
+
+            p {
+                -webkit-line-clamp: 4;
+                overflow: hidden;
+                max-height: 120px;
+            }
+        }
+    }
+
 }
