--- a/src/styles/setup/_variables.scss
+++ b/src/styles/setup/_variables.scss
@@ -16,6 +16,7 @@ $clr1: #FF385C;
 $clr2: #717171;
 $clr3: #222222;
 $clr3-opacity: #222222da;
+$clr3-opacity-2: #222222b4;
 $clr4: #484848;
 $clr5: #dddddd;
 $clr6: #ebebeb;
